# logsnarf

./: .env  .envrc  Caddyfile  Capfile  Cargo.toml  Gemfile  LICENSE.txt  Makefile  Procfile.dev  README.md  config.ru  go.mod  go.sum  logsnarf.gemspec  logsnarf.toml  main.go  samconfig.toml  template.yaml
benchmarks/: do_notation.rb  parsers.rb
cmd/: parse.go
config/: Caddyfile  caddy2.service  deploy.rb  logsnarf.service  logsnarf.socket
config/deploy/: production.rb
exe/: logsnarf
internal/credentials/: dynamodb_adapter.go
internal/extractor/: parse.go
internal/handler/: main.go
internal/parser/: machine.go  machine.go.rl  parser.go  parser_test.go  tokens_test.go
lib/: adapter_store.rb  app.rb  application.rb  cache.rb  credentials.rb  credentials_store.rb  decoder.rb  extractor.rb  logsnarf.rb  metric.rb  parser.rb  rack_app.rb  types.rb
lib/clients/: influx_db_v1.rb
lib/encoders/: influx_db.rb
lib/freedom_patches/: notifications.rb
lib/logsnarf/: app.rb  credentials.rb  decoder.rb  influxdb.rb  instrumenter.rb  loader.rb  metric.rb  parser.rb  version.rb  writer.rb
lib/logsnarf/adapter/: influxdb_v1.rb  influxdb_v2.rb
lib/logsnarf/clients/: influxdb_v1.rb
lib/logsnarf/encoders/: influxdb.rb
lib/logsnarf/subscribers/: influx_subscriber.rb  log_subscriber.rb
lib/subscribers/: extractor.rb
logsnarf-cr/: LICENSE  README.md  shard.yml
logsnarf-cr/benchmarks/: loop.cr  parser.cr
logsnarf-cr/spec/: logsnarf-cr_spec.cr  spec_helper.cr
logsnarf-cr/src/: app.cr  fast_parser.cr  logsnarf-cr.cr  metric.cr  parser.cr
logsnarf-ex/: .gitignore  README.md  mix.exs
logsnarf-ex/lib/: logsnarf.ex
logsnarf-ex/lib/logsnarf/: application.ex  endpoint.ex
logsnarf-ex/test/: logsnarf_test.exs
logsnarf-go/: go.mod  makefile
logsnarf-go/cmd/: root.go
logsnarf-go/internal/credentials/: main.go  (+1 more)
logsnarf-lambda/: template.yaml
logsnarf-lambda/src/: decoder.rs  error.rs  metric_store.rs
logsnarf-rb/: CODE_OF_CONDUCT.md  Procfile.dev  README.md  config.ru
logsnarf-rb-3/: .gitignore
logsnarf-rb-3/config/: deploy.rb
logsnarf-rb-3/lib/: decoder.rb  extractor.rb  metrics_buffer.rb
logsnarf-rb-3/ops/: app.pkr.hcl
logsnarf-rb-3/spec/: parser_spec.rb  spec_helper.rb
logsnarf-rb-3/system/: container.rb
logsnarf-rb/config/: deploy.rb
logsnarf-rb/lib/: types.rb
logsnarf-rb/ops/: app.json
logsnarf-rb/spec/: decoder_spec.rb  integration_spec.rb  loader_spec.rb
logsnarf-rb/system/: container.rb
logsnarf-rb/tools/: load_samples_adapter.rb  post_samples.rb  profile_async.rb
logsnarf-rs/: Cargo.toml  logsnarf.toml
logsnarf-rs-old/src/: adapter.rs  credentials.rs  decoder.rs  log_data.rs  writer_store.rs
logsnarf-rs/src/: app.rs  decoder.rs  error.rs  lib.rs  metric.rs  record_stream.rs
logsnarf-rs/src/metric_writer/: influxdb_v1.rs
ops/: app.json  app.pkr.hcl
ops/environments/: production.env
ops/scripts/: logsnarf.sh
ops/templates/: Caddyfile  logsnarf.service  restart-logsnarf.timer  telegraf.net.conf
spec/: decoder_spec.rb  influxdb_spec.rb  integration_spec.rb  loader_spec.rb  logsnarf_spec.rb  spec_helper.rb
spec/adapter/: influxdb_v1_spec.rb
spec/clients/: influxdb_v1_spec.rb
src/: adapter.rs  app.rs  credentials.rs  decoder.rs  domain.rs  error.rs  extractor.rs  handler.rs  influxdb_v1_adapter.rs  lib.rs  log_data.rs  metric.rs  metric_store.rs  opt.rs  parser.rs  settings.rs  util.rs  utils.rs  writer.rs
src/app/: memory.rs  mod.rs
src/metric_writer/: mod.rs
system/: boot.rb  container.rb  import.rb
system/boot/: exception_notifier.rb  http.rb  instrumenter.rb  rack_monitor.rb
system/providers/: http.rb  instrumentation.rb  sentry.rb  settings.rb
tools/: capture_samples.ru  load_samples.rb  profiling.rb
(+34 files in other folders)
