[package]
name = "logsnarf"
version = "0.1.0"
edition = "2021"
authors = ["Paul Sadauskas <paul@sadauskas.com>"]

[dependencies]
lambda_runtime = "0.5.1"
lambda_http = "0.5.1"

tokio = {version = "1", features = ["full", "tracing"]}
tokio-stream = "0.1.8"
tokio-util = {version = "0.7.1", features = ["codec", "compat"]}
async-trait = "0.1.53"
signal-hook = "0.3.13"
signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"] }

tracing = "0.1.32"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "json", "env-filter"] }

futures = "0.3.21"
thiserror = "1.0.30"

chrono = "0.4.19"

http = "0.2.6"
hyper = {version = "0.14.18", features = ["http1", "http2", "client"]}
bytes = "1.1.0"
aws-sdk-kinesis = "0.10.1"
aws-config = "0.10.1"
serde = "1.0.136"
serde_json = "1.0.79"

[dev-dependencies]
cargo-lambda = "0.6"

[[bin]]
name = "handle_log"
path = "src/bin/handle_log.rs"
test = false
