[package]
name = "logsnarf"
version = "0.1.0"
edition = "2021"
authors = ["Paul Sadauskas <paul@sadauskas.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Util
chrono = {version = "0.4", features = ["serde"]}
serde_derive = "1.0.8"
serde = "1.0.8"

# CLI
clap = {version = "4.0", features = ["derive", "unicode", "cargo", "wrap_help"]}
config = "0.13"
xdg = "2.4"

# Tokio
async-stream = "0.3"
futures = "0.3"
tokio = {version = "1", features = ["full", "tracing"]}
tokio-stream =  "0.1"
tokio-util =  {version = "0.7", features = ["codec", "compat"]}
bytes = "1"
pin-project-lite = "0.2"

# Adapters
url = "2.3"
reqwest = {version = "0.11", features = ["stream"]}

# instrumentation
console-subscriber = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.18"
tracing-futures = "0.2"
tracing-forest = { version = "0.1", features = ["full"] }
sentry-tracing = "0.27"

# errors
anyhow = "1.0"
exitcode = "1.1"
thiserror = "1.0"
sentry = "0.27"
async-trait = "0.1.58"
